# open-cobol

./: ChangeLog  HACKING  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  tarstamp.h
branches/compiler-configuration/cobc/: Makefile.options  cobc.conf  opt_parse.y  opt_scan.l  opt_test.c  options.h
branches/curses-windows/: Makefile.in  configure
branches/curses-windows-first-approach/: ChangeLog
branches/curses-windows-first-approach/libcob/: screenio.c
branches/curses-windows/cobc/: Makefile.in
branches/curses-windows/config/: Makefile.in
branches/curses-windows/copy/: Makefile.in
branches/curses-windows/doc/: Makefile.in  stamp-vti
branches/curses-windows/extras/: Makefile.in
branches/curses-windows/lib/: Makefile.in
branches/curses-windows/libcob/: Makefile.in  (+1 more)
branches/gnu-cobol-2.0-debugger/: Makefile.am  Makefile.in  TODO  config.h.in  configure  configure.ac
branches/gnu-cobol-2.0-debugger/debugger/: ChangeLog  Makefile.am  Makefile.in  breakpoints.cpy  gc-debugger.cob  helpers.cpy  logging.cpy  testprog2.cob  view-variable.cpy  watchpoints.cpy
branches/gnu-cobol-builtin-script/: ChangeLog  Makefile.in  README-rexx  aclocal.m4  configure  configure.ac
branches/gnu-cobol-cpp/: ChangeLog  HACKING  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
branches/gnu-cobol-cpp/build_aux/: ChangeLog
branches/gnu-cobol-cpp/cobc/: ChangeLog  Makefile.in  cobc.cpp  cobc.h  codegen.cpp  codeoptim.cpp  config.cpp  error.cpp  field.cpp  flag.def  naming.cpp  parser.y  pplex.l  ppparse.y  reserved.cpp  scanner.l  tree.cpp  tree.h  typeck.cpp  vcache.h  warning.def
branches/gnu-cobol-cpp/config/: ChangeLog  Makefile.in  cobol2002.conf  cobol85.conf  default.conf  mf.conf  mvs.conf
branches/gnu-cobol-cpp/copy/: Makefile.in
branches/gnu-cobol-cpp/doc/: Makefile.in  stamp-vti
branches/gnu-cobol-cpp/extras/: Makefile.in
branches/gnu-cobol-cpp/lib/: Makefile.in
branches/gnu-cobol-cpp/libcob/: ChangeLog  Makefile.in  call.cpp  common.cpp  common.h  exception.def  fileio.cpp  intrinsic.cpp  move.cpp  numeric.cpp  strings.cpp  system.def  termio.cpp
branches/gnu-cobol-cpp/po/: POTFILES.in  es.po
branches/gnu-cobol-cpp/tests/: ChangeLog  atlocal.in  package.m4  testsuite
branches/gnu-cobol-cpp/tests/cobol85/: Makefile.in  report.pl
branches/gnu-cobol-cpp/tests/testsuite.src/: data_binary.at  run_extensions.at  run_functions.at  run_misc.at
branches/gnucobol-debugger/: ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  configure.ac
branches/gnucobol-debugger/debugger/: ChangeLog  Makefile.am  Makefile.in  breakpoints.cpy  fulltext-search.cpy  logging.cpy  screen.cpy  watchpoints.cpy
branches/gnucobol-lmdb/: ChangeLog  Makefile.am  README  THANKS  configure.ac
branches/isam-lmdb/: ChangeLog  README  THANKS  configure.ac
build_aux/: ChangeLog
build_windows/: config.h.in  makedist.bat  version_cobc.rc  version_libcob.rc
build_windows/vc12/: libcob.vcxproj
build_windows/vc14/: libcob.vcxproj
build_windows/vs2008/: libcob.vcproj
build_windows/vs2010/: libcob.vcxproj  libcob.vcxproj.filters
build_windows/vs2012/: libcob.vcxproj
build_windows/vs2013/: libcob.vcxproj
build_windows/vs2015/: libcob.vcxproj
build_windows/vs2017/: libcob.vcxproj
cobc/: ChangeLog  Makefile.am  Makefile.in  Makefile.options  cobc.c  cobc.cpp  cobc.h  codegen.c  codegen.cpp  codeoptim.cpp  config.def  error.cpp  field.cpp  naming.cpp  opt_parse.y  opt_scan.l  opt_test.c  options.c  options.h  parser.y  pplex.l  ppparse.c  ppparse.def  ppparse.h  ppparse.y  reserved.c  tree.c  tree.cpp  tree.h  typeck.cpp  warning.def
config/: Makefile.am  Makefile.in  acu.conf  bs2000.conf  cobol2014.conf  default.conf  ibm-strict.conf  ibm.conf  mf.conf  runtime.cfg
copy/: ChangeLog  Makefile.am  Makefile.in  jvmapi.cpy  pyapi.cpy  rexxapi.cpy  tclapi.cpy
debugger/: ChangeLog  Makefile.am  fulltext-search.cpy  gc-debugger.cob  helpers.cpy  view-variable.cpy
doc/: Makefile.am  Makefile.in  cbrexx.tex  cbsyst.tex  gnucobol.texi  stamp-vti
external-doc/guide/: 1.texi  10.texi  11.texi  12.texi  2.texi  3.texi  4.texi  5.texi  6.texi  7.texi  8.texi  9.texi  A.texi  B.texi  C.texi  ChangeLog  D.texi  E.texi  LISTING-COBDUMP.texi  LISTING-DAY-FROM-DATE.texi  LISTING-GCic.texi  LISTING-STREAMIO.texi  LISTING-STREAMIOcb.texi  LISTING-colors.texi  Macros.texi  NOTE-CDF-LEAP.texi  NOTE-CDF-TURN.texi  NOTE-DD-FD-SD.texi  NOTE-DD-RS-RD.texi  NOTE-DD-SYNC-LEFT-RIGHT.texi  NOTE-ED-IO-CONTROL-MULT.texi  NOTE-ED-IO-CONTROL-SAME.texi  NOTE-ED-OBJECT-COMPUTER.texi  NOTE-ED-SELECT-ORG-IDX-S.texi  NOTE-ED-SELECT-ORG-L-SEQ.texi  NOTE-ED-SELECT.texi  NOTE-ED-SPECIAL-NAMES.texi  NOTE-ID-Overview.texi  NOTE-NOT-YET-IMPLEMENTED.texi  NOTE-PD-ACCEPT-4.texi  (+418 more)
external-doc/syntax-diagrams/: README  README.md  changelog.tex  compilation-group.tex  concepts.tex  data.tex  directives.tex  environment.tex  foreword.tex  gfdl.tex  grammar.tex  identification.tex  intrinsics.tex  key.tex  language-element-lists.tex  language-fundamentals.tex  procedure.tex
extras/: Makefile.in
lib/: Makefile.in  gettext.h
libcob/: ChangeLog  Makefile.am  Makefile.in  call.c  call.cpp  cobdecimal.cpp  cobgetopt.h  coblocal.h  common.c  common.cpp  common.h  debugger.c  fileio-call.c  fileio-isam-xisam.c  fileio-misc.c  fileio.c  fileio.cpp  intrinsic.c  intrinsic.cpp  move.cpp  numeric.cpp  screenio.c  screenio.cpp  system.def  utils.c
libcob/isam/: Makefile  NOTES  dbutil.c  isam.h  lmdb.c
po/: de.po  gnucobol.pot  it.po  ja.po  nl.po  pt.po
tests/: ChangeLog  Makefile.in  atlocal.in  atlocal_valgrind  listings-sed.sh  package.m4  pthread_test.c  run  syntax  syntax.at  testsuite  testsuite.at
tests/cobol85/: ChangeLog  Makefile.in  report.pl
tests/run.src/: misc.at
tests/syntax.lst/: prog1.lst  prog4.lst  prog5.lst  prog6.lst
tests/syntax.src/: listings.at
tests/testsuite.src/: configuration.at  data_packed.at  listings.at  run_extensions.at  run_file.at  run_functions.at  run_fundamental.at  run_misc.at  run_subscripts.at  used_binaries.at
(+210 files in other folders)
