#
# Makefile gnu-cobol-cpp
#
# Copyright (C) 2003-2017 Free Software Foundation, Inc.
# Written by Keisuke Nishida, Roger While, Simon Sobisch, Sergey Kashyrin
#
# This file is part of GNU Cobol C++.
#
# The GNU Cobol C++ compiler is free software: you can redistribute it
# and/or modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# GNU Cobol C++ is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Cobol C++.  If not, see <http://www.gnu.org/licenses/>.

include_HEADERS = 

SUBDIRS = libcob lib cobc bin config copy po doc tests extras

ACLOCAL_AMFLAGS = -I m4 --install
BUILT_SOURCES = defaults.h libcob.h
DISTCLEANFILES = $(BUILT_SOURCES)
# CLEANFILES = $(bin_SCRIPTS)

EXTRA_DIST = gnu-cobol-cpp.spec libcob.h.in
pkgincludedir = $(includedir)
pkginclude_HEADERS = libcob.h

dist-hook:
	echo "#define COB_TAR_DATE \"`date -u +'%b %d %Y %T'` UTC\"" > $(distdir)/tarstamp.h
	echo "#define COB_NUM_TAR_DATE `date -u +'%Y%m%d'`" >> $(distdir)/tarstamp.h
	echo "#define COB_NUM_TAR_TIME `date -u +'%H%M%S'`" >> $(distdir)/tarstamp.h
	find $(distdir) -type d -print | xargs chmod 755
	find $(distdir) -type f -print | xargs chmod 644
	chmod 755 $(distdir)/configure
	chmod 755 $(distdir)/doc/cobcinfo.sh
	chmod 755 $(distdir)/tests/testsuite
#	touch $(distdir)/cobc/ppparse.cpp
#	touch $(distdir)/cobc/parser.cpp
#	touch $(distdir)/cobc/pplex.cpp
#	touch $(distdir)/cobc/scanner.cpp
#	touch $(distdir)/doc/gnucobol-cpp.info
#	touch $(distdir)/doc/gnucobol-cpp.pdf
#	touch $(distdir)/libcob/libcob.3
#	touch $(distdir)/bin/cobcrun.1
#	touch $(distdir)/cobc/cobc.1
#	touch $(distdir)/tests/testsuite


defaults.h: Makefile.am $(top_builddir)/config.status
	@echo "Creating defaults.h..."
	@{								\
	  echo "/* Automatically generated by Makefile */";		\
	  echo "#define COB_CC           \"$(COB_CC)\"";		\
	  echo "#define COB_CFLAGS       \"$(COB_CFLAGS)\"";		\
	  echo "#define COB_LDFLAGS      \"$(COB_LDFLAGS)\"";		\
	  echo "#define COB_LIBS         \"$(COB_LIBS)\"";		\
	  echo "#define COB_CONFIG_DIR   \"$(COB_CONFIG_DIR)\"";	\
	  echo "#define COB_COPY_DIR     \"$(COB_COPY_DIR)\"";		\
	  echo "#define COB_LIBRARY_PATH \"$(COB_LIBRARY_PATH)\"";	\
	  echo "#define COB_MODULE_EXT   \"$(COB_MODULE_EXT)\"";	\
	  echo "#define COB_OBJECT_EXT   \"$(COB_OBJECT_EXT)\"";	\
	  echo "#define COB_BLD_CC       \"$(CXX)\"";			\
	  echo "#define COB_BLD_CFLAGS   \"$(CXXFLAGS)\"";		\
	  echo "#define COB_BLD_LD       \"$(LD)\"";			\
	  echo "#define COB_BLD_LDFLAGS  \"$(LDFLAGS)\"";		\
	  echo "#define COB_BLD_BUILD    \"$(build)\"";			\
	  echo "#define LOCALEDIR        \"$(datadir)/locale\"";	\
	} > defaults.h
